[package]
name = "dfvstritus"
authors = ["s.a.tanja@student.tue.nl"]
version = "0.1.0"
edition = "2021"
default-run = "dfvstritus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
cbc-old = []

[dependencies]
rustc-hash = "1.1.0"
coin_cbc = "0.1.6"
shh = "1.0.1"
rand = "0.8.5"
cpu-time = "1.0"

[dev-dependencies]
assert_cmd = "1.0"
rayon = "1.5"

[profile.release]
lto = true
opt-level = 3

[[bin]]
name = "debugtritus"
path = "src/bin-debug.rs"

[[bin]]
name = "dfvstritus"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false