[package]
name = "hex"
authors = ["s.a.tanja@student.tue.nl"]
version = "0.1.0"
edition = "2021"
default-run = "hex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
optil = ["old-cbc", "root-vc-solver"]
old-cbc = []
root-vc-solver = []
time-limit = []

[dependencies]
duct = "0.13.5"
coin_cbc = "0.1.6"
rand = "0.8.5"
rustc-hash = "1.1.0"
shh = "1.0.1"

[dev-dependencies]
cpu-time = "1.0"
assert_cmd = "1.0"
rayon = "1.5"

[profile.release]
lto = "fat"
panic = "abort"
incremental = true

[[bin]]
name = "dehex"
path = "src/bin-debug.rs"

[[bin]]
name = "hex"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false